force-app/main/default/objects/Dog__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>Current Age of Dog</description>
    <formula>MCEILING(( Today() -  Birthdate__c )  /  ( 365 / 12 ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>