force-app/main/default/objects/Dog__c/fields/Age_Dog__c.field-meta.xml
<CustomField>
    <fullName>Age_Dog__c</fullName>
    <formula>TEXT(FLOOR((TODAY() - Date_of_Birth__c )/365)) &amp;&apos; Years&apos; &amp; &apos; &apos; &amp; 
TEXT(FLOOR(MOD((TODAY() - Date_of_Birth__c),365)/30)) &amp;&apos; Months&apos; &amp; &apos; &apos;  &amp; 
TEXT(MOD(MOD((TODAY() - Date_of_Birth__c),365),30)) &amp;&apos; Days&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <type>Text</type>
</CustomField>