force-app/main/default/objects/Dog__c/fields/AgeYears__c.field-meta.xml
<CustomField>
    <fullName>AgeYears__c</fullName>
    <description>Current Age of Dog</description>
    <formula>(Today() -  Birthdate__c) / 365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age (Years)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>