force-app/main/default/objects/Dog__c/fields/Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Birthdate__c</fullName>
    <inlineHelpText>Format m/d/yyyy</inlineHelpText>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>