force-app/main/default/objects/Dog__c/fields/Breed__c.field-meta.xml
<CustomField>
    <fullName>Breed__c</fullName>
    <description>Describes the dog&apos;s breed</description>
    <label>Breed</label>
    <length>128</length>
    <type>Text</type>
</CustomField>