force-app/main/default/objects/Dog__c/fields/Dog_Certified__c.field-meta.xml
<CustomField>
    <fullName>Dog_Certified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dog Certified</label>
    <type>Checkbox</type>
</CustomField>