force-app/main/default/objects/Dog__c/fields/Dog_Eligible_by_DOB__c.field-meta.xml
<CustomField>
    <fullName>Dog_Eligible_by_DOB__c</fullName>
    <formula>If(ISBLANK( Date_of_Birth__c), Addmonths(today(),14), Addmonths(Date_of_Birth__c,14))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dog Eligible by DOB</label>
    <type>Date</type>
</CustomField>