force-app/main/default/objects/Dog__c/fields/Dog_Picture__c.field-meta.xml
<CustomField>
    <fullName>Dog_Picture__c</fullName>
    <label>dog Picture</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>