force-app/main/default/objects/Dog__c/fields/Dog_Status__c.field-meta.xml
<CustomField>
    <fullName>Dog_Status__c</fullName>
    <label>Dog Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Waiting for Microchip Number</fullName>
            </value>
            <value>
                <fullName>Waiting to be Spayed-Neutered</fullName>
            </value>
            <value>
                <fullName>Too Young</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Certified</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>Reject due to health check failure</fullName>
                <label>Rejected due to health check failure</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>