force-app/main/default/objects/Dog__c/fields/Eligible_byDOB__c.field-meta.xml
<CustomField>
    <fullName>Eligible_byDOB__c</fullName>
    <formula
    >If(ISBLANK( Birthdate__c), Addmonths(today(),14), Addmonths(Birthdate__c,14))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eligible by DOB</label>
    <type>Date</type>
</CustomField>