force-app/main/default/objects/Dog__c/fields/Expired__c.field-meta.xml
<CustomField>
    <fullName>Expired__c</fullName>
    <formula>AND
( 
 (VaccineDueDistemper__c  &lt;  TODAY()),
 (VaccineDueHepatitis__c  &lt;  TODAY()) ,
 (VaccineDueParainfluenza__c &lt;  TODAY()),
 (VaccineDueRabies__c &lt;  TODAY()),
 (VaccineDueParvovirus__c &lt;  TODAY()), 
 (PhysicalExamDue__c &lt; TODAY())
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expired</label>
    <type>Checkbox</type>
</CustomField>