force-app/main/default/objects/Dog__c/fields/Expiry_Date_Status__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date_Status__c</fullName>
    <formula>IF(
AND(
TODAY() &lt; (Physical_Exam_Due__c ),
TODAY() &lt; (Vaccine_Due_Distemper__c ),
TODAY() &lt; (Vaccine_Due_Hepatitis__c ),
TODAY() &lt; (Vaccine_Due_Parainfluenza__c),
TODAY() &lt; (Vaccine_Due_Parvovirus__c ),
TODAY() &lt; (Vaccine_Due_Rabies__c )
),
&apos;Good&apos;,
&apos;Expired&apos; &amp;  IMAGE(&quot;/img/samples/rating1.gif&quot;, &apos;*&apos;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vaccination Expiry Date Status</label>
    <type>Text</type>
</CustomField>