force-app/main/default/objects/Dog__c/fields/ExpiryDateStatus__c.field-meta.xml
<CustomField>
    <fullName>ExpiryDateStatus__c</fullName>
    <formula>IF(
AND(
TODAY() &lt; (PhysicalExamDue__c ),
TODAY() &lt; (VaccineDueDistemper__c ),
TODAY() &lt; (VaccineDueHepatitis__c ),
TODAY() &lt; (VaccineDueParainfluenza__c),
TODAY() &lt; (VaccineDueParvovirus__c ),
TODAY() &lt; (VaccineDueRabies__c )
),
&apos;Good&apos;,
&apos;Expired&apos; &amp;  IMAGE(&quot;/img/samples/rating1.gif&quot;, &apos;*&apos;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Health Record Status</label>
    <type>Text</type>
</CustomField>