force-app/main/default/objects/Dog__c/fields/Health_Check_Note__c.field-meta.xml
<CustomField>
    <fullName>Health_Check_Note__c</fullName>
    <label>Health Check Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>