force-app/main/default/objects/Dog__c/fields/HealthCareRecordsStatus__c.field-meta.xml
<CustomField>
    <fullName>HealthCareRecordsStatus__c</fullName>
    <formula>IF( ExpiryDateStatus__c  = &quot;Good&quot;, &quot; All Good &quot;, NULL) 

&amp;

IF(VaccineDueDistemper__c &lt; TODAY(),  IMAGE(&quot;/img/samples/rating1.gif&quot;,&apos;*&apos;) &amp; &quot; Distemper Vaccination is expired&quot; &amp;  BR() , IMAGE(&quot;/img/samples/rating2.gif&quot;,&apos;*&apos;) &amp; &quot; Distemper Vaccination is good until &quot; &amp;  TEXT(VaccineDueDistemper__c) &amp;  BR())
&amp; 

IF(VaccineDueHepatitis__c &lt; TODAY(),  IMAGE(&quot;/img/samples/rating1.gif&quot;,&apos;*&apos;) &amp; &quot; Hepatitis Vaccination is expired&quot; &amp;  BR() , IMAGE(&quot;/img/samples/rating2.gif&quot;,&apos;*&apos;) &amp; &quot; Hepatitis Vaccination is good until &quot; &amp;  TEXT(VaccineDueHepatitis__c) &amp;  BR())

&amp; 

IF(VaccineDueParainfluenza__c &lt; TODAY(),  IMAGE(&quot;/img/samples/rating1.gif&quot;,&apos;*&apos;) &amp; &quot; Parainflunenza Vaccination is expired&quot; &amp;  BR() , IMAGE(&quot;/img/samples/rating2.gif&quot;,&apos;*&apos;) &amp; &quot; Parainflunenza Vaccination is good until &quot; &amp;  TEXT(VaccineDueParainfluenza__c) &amp;  BR())

&amp; 

IF(VaccineDueParvovirus__c  &lt; TODAY(),  IMAGE(&quot;/img/samples/rating1.gif&quot;,&apos;*&apos;) &amp; &quot; Paravovirus Vaccination is expired&quot; &amp;  BR() , IMAGE(&quot;/img/samples/rating2.gif&quot;,&apos;*&apos;) &amp; &quot; Paravovirus Vaccination is good until &quot; &amp;  TEXT(VaccineDueParvovirus__c) &amp;  BR())

&amp; 

IF(VaccineDueRabies__c &lt; TODAY(),  IMAGE(&quot;/img/samples/rating1.gif&quot;,&apos;*&apos;) &amp; &quot; Rabies Vaccination is expired&quot; &amp;  BR() , IMAGE(&quot;/img/samples/rating2.gif&quot;,&apos;*&apos;) &amp; &quot; Rabies Vaccination is good until &quot; &amp;  TEXT(VaccineDueRabies__c) &amp;  BR())

&amp; 

IF(PhysicalExamDue__c &lt; TODAY(),  IMAGE(&quot;/img/samples/rating1.gif&quot;,&apos;*&apos;) &amp; &quot; Physical Exam is not up to date&quot; &amp;  BR() , IMAGE(&quot;/img/samples/rating2.gif&quot;,&apos;*&apos;) &amp; &quot; Physical Exam is good until &quot; &amp;  TEXT(PhysicalExamDue__c) &amp;  BR())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Health Care Records Status</label>
    <type>Text</type>
</CustomField>