force-app/main/default/objects/Dog__c/fields/HealthCheckNote__c.field-meta.xml
<CustomField>
    <fullName>HealthCheckNote__c</fullName>
    <label>Health Check Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>