force-app/main/default/objects/Dog__c/fields/HealthFormReceived__c.field-meta.xml
<CustomField>
    <fullName>HealthFormReceived__c</fullName>
    <description
    >The date the most recent version of Vet Health Form was uploaded</description>
    <label>Last  Vet Health Form</label>
    <type>Date</type>
</CustomField>