force-app/main/default/objects/Dog__c/fields/Height__c.field-meta.xml
<CustomField>
    <fullName>Height__c</fullName>
    <description>Height at shoulders</description>
    <label>Height (in)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>