force-app/main/default/objects/Dog__c/fields/Latest_Physical_Exam_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Latest_Physical_Exam_Outcome__c</fullName>
    <label>Latest Physical Exam Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
                <default>true</default>
                <label>Pass</label>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>