force-app/main/default/objects/Dog__c/fields/Microchip_Number__c.field-meta.xml
<CustomField>
    <fullName>Microchip_Number__c</fullName>
    <description>Dog Microchip Number</description>
    <label>Microchip Number</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>