force-app/main/default/objects/Dog__c/fields/MicrochipNumber__c.field-meta.xml
<CustomField>
    <fullName>MicrochipNumber__c</fullName>
    <description>Dog Microchip Number</description>
    <label>Microchip Number</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>