force-app/main/default/objects/Dog__c/fields/Most_Recent_Distemper_Vaccine__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Distemper_Vaccine__c</fullName>
    <description>Vaccination expiration date</description>
    <inlineHelpText>Most Recent Distemper Vaccine</inlineHelpText>
    <label>Most Recent Distemper Vaccine</label>
    <type>Date</type>
</CustomField>