force-app/main/default/objects/Dog__c/fields/Most_Recent_Hepatitis_Vaccine__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Hepatitis_Vaccine__c</fullName>
    <description>Hepatitis/Adenovirus vaccination expiration date</description>
    <inlineHelpText>Latest  Hepatitis/Adenovirus vaccination date</inlineHelpText>
    <label>Hepatitis Vaccine Expiration date</label>
    <type>Date</type>
</CustomField>