force-app/main/default/objects/Dog__c/fields/Most_Recent_Parainfluenza_Vaccine__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Parainfluenza_Vaccine__c</fullName>
    <description>Most recent Parainfluenza Vaccine</description>
    <inlineHelpText>Most recent Parainfluenza vaccine Date</inlineHelpText>
    <label>Most Recent Parainfluenza Vaccine</label>
    <type>Date</type>
</CustomField>