force-app/main/default/objects/Dog__c/fields/Most_Recent_Physical_Exam__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Physical_Exam__c</fullName>
    <description>Most recent Physical exam</description>
    <inlineHelpText>Most recend Physical exam</inlineHelpText>
    <label>Most Recend Physical Exam</label>
    <type>Date</type>
</CustomField>