force-app/main/default/objects/Dog__c/fields/Most_Recent_Rabies_Vaccine__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Rabies_Vaccine__c</fullName>
    <description>Rabies Vaccination Expiration Date</description>
    <inlineHelpText>Rabies Vaccination Expiration Date</inlineHelpText>
    <label>Rabies Vaccine Expiration Date</label>
    <type>Date</type>
</CustomField>