force-app/main/default/objects/Dog__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dog Owner Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Client__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dog_Owner</relationshipLabel>
    <relationshipName>Dog_Owner</relationshipName>
    <type>Lookup</type>
</CustomField>