force-app/main/default/objects/Dog__c/fields/Owner_First_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_First_Last_Name__c</fullName>
    <formula
  >Owner__r.First_Name__c &amp;&quot;  &quot;&amp; Owner__r.Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner First &amp; Last Name</label>
    <type>Text</type>
</CustomField>