force-app/main/default/objects/Dog__c/fields/OwnerFirstLastName__c.field-meta.xml
<CustomField>
    <fullName>OwnerFirstLastName__c</fullName>
    <formula>DogOwner__r.First_Name__c &amp;&quot;  &quot;&amp; DogOwner__r.Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OwnerFirstLastName</label>
    <type>Text</type>
</CustomField>