force-app/main/default/objects/Dog__c/fields/Physical_Exam_Due__c.field-meta.xml
<CustomField>
    <fullName>Physical_Exam_Due__c</fullName>
    <description>Date the next physical examination is due</description>
    <label>Physical Exam Due</label>
    <type>Date</type>
</CustomField>