force-app/main/default/objects/Dog__c/fields/Physical_Exam_Latest__c.field-meta.xml
<CustomField>
    <fullName>Physical_Exam_Latest__c</fullName>
    <description>Most recent Physical exam</description>
    <inlineHelpText>Most recent Physical exam</inlineHelpText>
    <label>Most Recent Physical Exam</label>
    <type>Date</type>
</CustomField>