force-app/main/default/objects/Dog__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <description>Program the dog is in training for/certified for</description>
    <label>Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assistance Dogs Set In Motion</fullName>
            </value>
            <value>
                <fullName>Team Certification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>