force-app/main/default/objects/Dog__c/fields/Replaced_by_dog__c.field-meta.xml
<CustomField>
    <fullName>Replaced_by_dog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Replaced by dog</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Active__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Dog__c</referenceTo>
    <relationshipLabel>Replaced_by_dog</relationshipLabel>
    <relationshipName>Replaced_by_dog</relationshipName>
    <type>Lookup</type>
</CustomField>