force-app/main/default/objects/Dog__c/fields/SpayedNeutered__c.field-meta.xml
<CustomField>
    <fullName>SpayedNeutered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Spayed-Neutered</label>
    <type>Checkbox</type>
</CustomField>