force-app/main/default/objects/Dog__c/fields/Vaccine_Due_Parainfluenza__c.field-meta.xml
<CustomField>
    <fullName>Vaccine_Due_Parainfluenza__c</fullName>
    <description>Date next Parainfluenza vaccine is due</description>
    <label>Parainfluenza Vaccine Due</label>
    <type>Date</type>
</CustomField>