force-app/main/default/objects/Dog__c/fields/Vaccine_Latest_Distemper__c.field-meta.xml
<CustomField>
    <fullName>Vaccine_Latest_Distemper__c</fullName>
    <description>Most recent distemper vaccination date</description>
    <inlineHelpText>Most Recent Distemper Vaccine</inlineHelpText>
    <label>Most Recent Distemper Vaccine</label>
    <type>Date</type>
</CustomField>