force-app/main/default/objects/Dog__c/fields/Vaccine_Latest_Parvovirus__c.field-meta.xml
<CustomField>
    <fullName>Vaccine_Latest_Parvovirus__c</fullName>
    <description>Most recent Parvovirus vaccine date</description>
    <inlineHelpText>Most recent Parvovirus Vaccine date</inlineHelpText>
    <label>Most Recent Parvovirus Vaccine</label>
    <type>Date</type>
</CustomField>