force-app/main/default/objects/Dog__c/fields/Vaccine_Latest_Rabies__c.field-meta.xml
<CustomField>
    <fullName>Vaccine_Latest_Rabies__c</fullName>
    <description>Most Recent Rabies vaccination Date</description>
    <inlineHelpText>Most recent Rabies vaccination date</inlineHelpText>
    <label>Most Recent Rabies Vaccine</label>
    <type>Date</type>
</CustomField>