force-app/main/default/objects/Dog__c/fields/VaccineDueDA2PP__c.field-meta.xml
<CustomField>
    <fullName>VaccineDueDA2PP__c</fullName>
    <description>Date next DA2PP vaccination is due</description>
    <label>DA2PP Vaccine Due</label>
    <type>Date</type>
</CustomField>