force-app/main/default/objects/Dog__c/fields/VaccineDueDistemper__c.field-meta.xml
<CustomField>
    <fullName>VaccineDueDistemper__c</fullName>
    <description>Date next Distemper vaccination is due</description>
    <label>Distemper Vaccine Due</label>
    <type>Date</type>
</CustomField>