force-app/main/default/objects/Dog__c/fields/VaccineDueHepatitis__c.field-meta.xml
<CustomField>
    <fullName>VaccineDueHepatitis__c</fullName>
    <description>Date next Hepatitis/Adenovirus vaccination is due</description>
    <label>Hepatitis/Adenovirus Vaccination Due</label>
    <type>Date</type>
</CustomField>