force-app/main/default/objects/Dog__c/fields/VaccineDueParainfluenza__c.field-meta.xml
<CustomField>
    <fullName>VaccineDueParainfluenza__c</fullName>
    <description>Date next Parainfluenza vaccine is due</description>
    <label>Parainfluenza Vaccine Due</label>
    <type>Date</type>
</CustomField>