force-app/main/default/objects/Dog__c/fields/VaccineDueParvovirus__c.field-meta.xml
<CustomField>
    <fullName>VaccineDueParvovirus__c</fullName>
    <description>Date next Parvovirus vaccination is due</description>
    <label>Parvovirus Vaccine Due</label>
    <type>Date</type>
</CustomField>