force-app/main/default/objects/Dog__c/fields/VaccineDueRabies__c.field-meta.xml
<CustomField>
    <fullName>VaccineDueRabies__c</fullName>
    <description>Date next Rabies vaccination is due</description>
    <label>Rabies Vaccine Due</label>
    <type>Date</type>
</CustomField>