force-app/main/default/objects/Dog__c/fields/VaccineLatestHepatitis__c.field-meta.xml
<CustomField>
    <fullName>VaccineLatestHepatitis__c</fullName>
    <description>Most recent Hepatitis/Adenovirus vaccination date</description>
    <inlineHelpText
    >Latest  Hepatitis/Adenovirus vaccination date</inlineHelpText>
    <label>Most Recent Hepatitis Vaccine</label>
    <type>Date</type>
</CustomField>