force-app/main/default/objects/Dog__c/fields/VaccineLatestParainfluenza__c.field-meta.xml
<CustomField>
    <fullName>VaccineLatestParainfluenza__c</fullName>
    <description>Most recent Parainfluenza vaccination date</description>
    <inlineHelpText>Most recent Parainfluenza vaccine Date</inlineHelpText>
    <label>Most Recent Parainfluenza Vaccine</label>
    <type>Date</type>
</CustomField>