force-app/main/default/objects/Dog__c/fields/VacExamsReceived__c.field-meta.xml
<CustomField>
    <fullName>VacExamsReceived__c</fullName>
    <description
    >The date the most recent version of Vaccinations and Exams was uploaded</description>
    <inlineHelpText>Set at the time of file upload. Do not edit directly.</inlineHelpText>
    <label>Last  Vaccinations and Exams</label>
    <type>Date</type>
</CustomField>