force-app/main/default/objects/Dog__c/fields/VarToday_Date__c.field-meta.xml
<CustomField>
    <fullName>VarToday_Date__c</fullName>
    <formula>Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VarToday Date</label>
    <type>Date</type>
</CustomField>