force-app/main/default/objects/Dog__c/fields/Vet_Address1__c.field-meta.xml
<CustomField>
    <fullName>Vet_Address1__c</fullName>
    <label>Vet Address1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>