force-app/main/default/objects/Dog__c/fields/Vet_Address2__c.field-meta.xml
<CustomField>
    <fullName>Vet_Address2__c</fullName>
    <label>Vet Address2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>