force-app/main/default/objects/Dog__c/fields/Vet_City__c.field-meta.xml
<CustomField>
    <fullName>Vet_City__c</fullName>
    <label>Vet City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>