force-app/main/default/objects/Dog__c/fields/Vet_Clinic__c.field-meta.xml
<CustomField>
    <fullName>Vet_Clinic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Veterinary Clinic</description>
    <label>Vet Clinic</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dogs (Vet Clinic)</relationshipLabel>
    <relationshipName>VetDogs</relationshipName>
    <type>Lookup</type>
</CustomField>